--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   <script type="module">
+      import { get, set, clear, keys, del }
+      from "https://cdn.jsdelivr.net/npm/idb-keyval@3/dist/idb-keyval.mjs";
+      window.idbKV = { get: get, set: set, clear: clear, keys: keys, del: del };
+   </script>
 </head>
 
 <body>
+   <noscript>This page requires Javascript enabled in your browser to work.</noscript>
    <div class="container m-5">
       <h1>Identificateur de musique trad québécoises et irlandaises</h1>
       <div class="container ml-5">
