--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
             </div>
          </div>
          <div>
+            <h4 class="mt-3">Chercher dans l'index</h4>
+            <button type="button" class="btn btn-danger btn-lg" id="startSearchingButton">Chercher</button>
+         </div>
+         <div>
             <h4 class="mt-3">Importer un fichier audio</h4>
             <button type="button" class="btn btn-danger btn-lg" id="startImportingButton">Importer</button>
          </div>
@@ -125,11 +129,13 @@
       </div>
    </div>
    <button type="button" class="btn btn-info btn-lg fixed-bottom d-none" id="topButton">Top</button>
+   <script type="text/javascript" src="assets/aho-corasick/aho-corasick.js"></script>
    <script type="text/javascript" src="assets/als-wave-parser/wav-parser.js"></script>
    <script type="text/javascript" src="assets/fft/utils.js"></script>
    <script type="text/javascript" src="assets/fft/fft.js"></script>
    <script type="text/javascript" src="assets/constants.js"></script>
    <script type="text/javascript" src="assets/utils.js"></script>
+   <script type="text/javascript" src="assets/tuneIndexService.js"></script>
    <script type="text/javascript" src="assets/toAbcConverter.js"></script>
    <script type="text/javascript" src="assets/processingService.js"></script>
    <script type="text/javascript" src="assets/recordingService.js"></script>
