--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title>Identificateur de musique trad</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="icon" type="image/png" href="assets/favicon.ico">
+   <link rel="icon" type="image/png" href="icons/favicon.ico">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -106,25 +106,31 @@
                </div>
             </div>
          </div>
-         <div>
-            <h4 class="mt-3">Chercher dans l'index</h4>
-            <button type="button" class="btn btn-danger btn-lg" id="startSearchingButton">Chercher</button>
+         <div class="mx-auto d-block">
+            <button type="button" class="btn mx-auto d-block" id="startRecordingButton">
+               <img src="icons/idle1.svg" alt="Record" class="img-fluid" style="height:300px" id="recordImage">
+            </button>
          </div>
-         <div>
-            <h4 class="mt-3">Importer un fichier audio</h4>
-            <button type="button" class="btn btn-danger btn-lg" id="startImportingButton">Importer</button>
+         <div class="mx-auto d-block">
+            <table class="table table-bordered" id="resultTable"></table>
          </div>
-         <div>
-            <h4 class="mt-3">Écouter</h4>
-            <button type="button" class="btn btn-danger btn-lg" id="startRecordingButton">Écouter</button>
-            <button type="button" class="btn btn-danger btn-lg" id="stopRecordingButton">Stop</button>
-            <br>
-            <h4 class="mt-3">Signal canvas</h4>
-            <canvas class="border" id="signalCanvas"></canvas>
-            <h4 class="mt-3">Lattice canvas</h4>
-            <canvas class="border" id="latticeCanvas"></canvas>
-            <h4 class="mt-3">Contour canvas</h4>
-            <canvas class="border" id="contourCanvas"></canvas>
+         <div class="collapse" id="debugDiv">
+            <div>
+               <h4 class="mt-3">Chercher dans l'index</h4>
+               <button type="button" class="btn btn-danger btn-lg" id="startSearchingButton">Chercher</button>
+            </div>
+            <div>
+               <h4 class="mt-3">Importer un fichier audio</h4>
+               <button type="button" class="btn btn-danger btn-lg" id="startImportingButton">Importer</button>
+            </div>
+            <div>
+               <h4 class="mt-3">Signal canvas</h4>
+               <canvas class="border" id="signalCanvas"></canvas>
+               <h4 class="mt-3">Lattice canvas</h4>
+               <canvas class="border" id="latticeCanvas"></canvas>
+               <h4 class="mt-3">Contour canvas</h4>
+               <canvas class="border" id="contourCanvas"></canvas>
+            </div>
          </div>
       </div>
    </div>
@@ -135,6 +141,7 @@
    <script type="text/javascript" src="assets/fft/fft.js"></script>
    <script type="text/javascript" src="assets/constants.js"></script>
    <script type="text/javascript" src="assets/utils.js"></script>
+   <script type="text/javascript" src="assets/resultService.js"></script>
    <script type="text/javascript" src="assets/tuneIndexService.js"></script>
    <script type="text/javascript" src="assets/toAbcConverter.js"></script>
    <script type="text/javascript" src="assets/processingService.js"></script>
