--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
          </div>
          <div class="mx-auto d-block">
             <button type="button" class="btn mx-auto d-block" id="startRecordingButton">
-               <img src="icons/idle1.svg" alt="Record" class="img-fluid" style="height:300px" id="recordImage">
+               <img src="icons/Idle1.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
          </div>
          <div class="mx-auto d-block">
