--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <body class="d-flex flex-column h-100">
    <noscript>This page requires Javascript enabled in your browser to work.</noscript>
    <div class="container m-5">
-      <h1>Tradify</h1>
       <div class="container ml-5">
-         <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
+         <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
          <div id="aboutCollapsed" class="collapse mt-3 p-4 bg-light rounded">
             <p>Cette application permet d'identifier une pièce de musique trad québécoise ou irlandaise et d'en récupérer la partition.</p>
             <a href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger le dépôt au format ZIP</a>
@@ -106,9 +105,12 @@
                </div>
             </div>
          </div>
-         <div class="mx-auto d-block">
-            <button type="button" class="btn mx-auto d-block" id="startRecordingButton">
-               <img src="icons/Idle1.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
+         <div class="d-flex justify-content-center">
+            <img src="icons/Title.png" alt="Tradify" class="img-fluid" style="height:100px">
+         </div>
+         <div class="d-flex justify-content-center">
+            <button type="button" class="btn" id="startRecordingButton">
+               <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
          </div>
          <div class="mx-auto d-block my-2">
