Displayed tune names now link to sheet music

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
          </div>
-         <div class="mx-auto d-block my-2">
-            <table class="table table-bordered" id="resultTable"></table>
+         <div class="d-flex justify-content-center mx-auto my-2">
+            <table class="w-auto table table-bordered" id="resultTable"></table>
          </div>
          <div class="collapse" id="debugDiv">
             <div>
