--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
    <div class="container m-5">
       <div class="container ml-5">
          <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
+         <div class="d-flex justify-content-center">
+            <img src="icons/Title.png" alt="Tradify" class="img-fluid" style="height:100px">
+         </div>
          <div id="aboutCollapsed" class="collapse mt-3 p-4 bg-light rounded">
-            <p>Cette application permet d'identifier une pièce de musique trad québécoise ou irlandaise et d'en récupérer la partition.</p>
-            <a href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger le dépôt au format ZIP</a>
+            <p>
+               Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions.
+               Elle est fortement inspirée du travail de Tom Willy (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>).
+            </p>
+            <a href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger les partitions au format ZIP</a>
             <h4>Liens utiles</h4>
             <div class="container d-flex flex-wrap">
                <div class="card m-1" style="width: 18rem;">
@@ -106,9 +112,6 @@
             </div>
          </div>
          <div class="d-flex justify-content-center">
-            <img src="icons/Title.png" alt="Tradify" class="img-fluid" style="height:100px">
-         </div>
-         <div class="d-flex justify-content-center">
             <button type="button" class="btn" id="startRecordingButton">
                <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
@@ -138,7 +141,7 @@
    </div>
    <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-         <small class="text-muted">Adapted from the work of Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) by Ludovic A.-Lussier.</small>
+         <small class="text-muted">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
       </div>
    </footer>
    <script type="text/javascript" src="assets/aho-corasick/aho-corasick.js"></script>
