--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-   <title>Tradify</title>
+   <title data-i18n-key="title">Tradify</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="icon" type="image/png" href="icons/favicon.ico">
@@ -17,12 +17,12 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-   <noscript>Veuillez activer Javascript dans votre navigateur pour faire fonctionner cette page.</noscript>
+   <noscript data-i18n-key="noscript">Veuillez activer Javascript dans votre navigateur pour faire fonctionner cette page.</noscript>
    <div class="container m-5">
       <div class="container ml-5">
          <div class="d-flex justify-content-between">
-            <button type="button" class="btn btn-secondary " data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
-            <select data-i18n-switcher class="form-select w-auto" aria-label="Sélecteur de langue">
+            <button data-i18n-key="about" type="button" class="btn btn-secondary " data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
+            <select data-i18n-switcher class="form-select w-auto" aria-label="Dropdown menu for langage selection">
                <option value="fr" selected>fr</option>
                <option value="en">en</option>
             </select>
@@ -36,83 +36,83 @@
                Elle est fortement inspirée du travail de Tom Willy (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>).
             </p>
             <a href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger les partitions au format ZIP</a>
-            <h4>Liens utiles</h4>
+            <h4 data-i18n-key="link">Liens utiles</h4>
             <div class="container d-flex flex-wrap">
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Dépôt Github</h5>
-                     <p class="card-text">Un dépôt de partitions trad québécoises et irlandaises.</p>
-                     <a href="https://ludovical.github.io/Partitions/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="repositoryTitle" class="card-title">Dépôt Github</h5>
+                     <p data-i18n-key="repositoryDescription" class="card-text">Un dépôt de partitions trad québécoises et irlandaises.</p>
+                     <a data-i18n-key="followLink" href="https://ludovical.github.io/Partitions/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">FolkSets</h5>
-                     <p class="card-text">Le dépôt Github d'un projet de liseuse de partitions pour appareils Android.</p>
-                     <a href="https://github.com/LudovicAL/FolkSets" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="folksetTitle" class="card-title">FolkSets</h5>
+                     <p data-i18n-key="folksetDescription" class="card-text">Le dépôt Github d'un projet de liseuse de partitions pour appareils Android.</p>
+                     <a data-i18n-key="followLink" href="https://github.com/LudovicAL/FolkSets" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Musescore</h5>
-                     <p class="card-text">Une application permettant de mettre en page vos partitions.</p>
-                     <a href="https://musescore.com/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="musescoreTitle" class="card-title">Musescore</h5>
+                     <p data-i18n-key="musescoreDescription" class="card-text">Une application permettant de mettre en page vos partitions.</p>
+                     <a data-i18n-key="followLink" href="https://musescore.com/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">FolkFriend</h5>
-                     <p class="card-text">FolkFriend écoute votre musique et cherche des correspondances dans la base de données de The Session.</p>
-                     <a href="https://folkfriend.app/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="folkFriendTitle" class="card-title">FolkFriend</h5>
+                     <p data-i18n-key="folkFriendDescription" class="card-text">FolkFriend écoute votre musique et cherche des correspondances dans la base de données de The Session.</p>
+                     <a data-i18n-key="followLink" href="https://folkfriend.app/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">The Session</h5>
-                     <p class="card-text">Un dépôt de partitions pour la musique traditionnelle irlandaise.</p>
-                     <a href="https://thesession.org/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="thesessionTitle" class="card-title">The Session</h5>
+                     <p data-i18n-key="thesessionDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle irlandaise.</p>
+                     <a data-i18n-key="followLink" href="https://thesession.org/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Montreal Session</h5>
-                     <p class="card-text">Un dépôt de partitions pour la musique traditionnelle irlandaise.</p>
-                     <a href="https://www.montrealsession.ca/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="montrealsessionTitle" class="card-title">Montreal Session</h5>
+                     <p data-i18n-key="montrealsessionDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle irlandaise à Montréal.</p>
+                     <a data-i18n-key="followLink" href="https://www.montrealsession.ca/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Vitrifolk</h5>
-                     <p class="card-text">Un dépôt de partitions pour la musique traditionnelle canadienne.</p>
-                     <a href="https://www.vitrifolk.fr/partitions/partitions-canada.html" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="vitrifolkTitle" class="card-title">Vitrifolk</h5>
+                     <p data-i18n-key="vitrifolkDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle canadienne.</p>
+                     <a data-i18n-key="followLink" href="https://www.vitrifolk.fr/partitions/partitions-canada.html" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Famille Remon</h5>
-                     <p class="card-text">Le dépôt de partitions de la famille Remon.</p>
-                     <a href="https://lietteremon.com/archives-familiales/airs/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="familleremonTitle" class="card-title">Famille Remon</h5>
+                     <p data-i18n-key="familleremonDescription" class="card-text">Le dépôt de partitions de la famille Remon.</p>
+                     <a data-i18n-key="followLink" href="https://lietteremon.com/archives-familiales/airs/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Le violon de Jos</h5>
-                     <p class="card-text">Le dépôt de partitions pour la musique traditionnelle québécoise.</p>
-                     <a href="https://leviolondejos.wiki/index.php/Morceaux" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="leviolondejosTitle" class="card-title">Le violon de Jos</h5>
+                     <p data-i18n-key="leviolondejosDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle québécoise.</p>
+                     <a data-i18n-key="followLink" href="https://leviolondejos.wiki/index.php/Morceaux" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Tune Arch</h5>
-                     <p class="card-text">Un dépôt de partitions pour la musique traditionnelle.</p>
-                     <a href="https://tunearch.org/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="tunearchTitle" class="card-title">Tune Arch</h5>
+                     <p data-i18n-key="tunearchDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle.</p>
+                     <a data-i18n-key="followLink" href="https://tunearch.org/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
-                     <h5 class="card-title">Folk Tune Finder</h5>
-                     <p class="card-text">Un dépôt de partitions pour la musique traditionnelle.</p>
-                     <a href="https://www.folktunefinder.com/" class="btn btn-primary" target="_blank">Y aller</a>
+                     <h5 data-i18n-key="folktunefinderTitle" class="card-title">Folk Tune Finder</h5>
+                     <p data-i18n-key="folktunefinderDescription" class="card-text">Un dépôt de partitions pour la musique traditionnelle.</p>
+                     <a data-i18n-key="followLink" href="https://www.folktunefinder.com/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
             </div>
@@ -147,7 +147,7 @@
    </div>
    <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-         <small class="text-muted">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
+         <small data-i18n-key="footer" class="text-muted">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
       </div>
    </footer>
    <script type="text/javascript" src="assets/aho-corasick/aho-corasick.js"></script>
