--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions.
                Elle est fortement inspirée du travail de Tom Willy (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>).
             </p>
-            <a href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger les partitions au format ZIP</a>
-            <h4 data-i18n-key="link">Liens utiles</h4>
+            <a data-i18n-key="download" href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger les partitions au format ZIP</a>
+            <h4 data-i18n-key="links">Liens utiles</h4>
             <div class="container d-flex flex-wrap">
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
