Locale files are now cached

--- a/index.html
+++ b/index.html
@@ -154,14 +154,15 @@
    <script type="text/javascript" src="assets/als-wave-parser/wav-parser.js"></script>
    <script type="text/javascript" src="assets/fft/utils.js"></script>
    <script type="text/javascript" src="assets/fft/fft.js"></script>
-   <script type="text/javascript" src="assets/locale.js"></script>
    <script type="text/javascript" src="assets/constants.js"></script>
    <script type="text/javascript" src="assets/utils.js"></script>
+   <script type="text/javascript" src="assets/locale.js"></script>
    <script type="text/javascript" src="assets/resultService.js"></script>
    <script type="text/javascript" src="assets/tuneIndexService.js"></script>
    <script type="text/javascript" src="assets/toAbcConverter.js"></script>
    <script type="text/javascript" src="assets/processingService.js"></script>
    <script type="text/javascript" src="assets/recordingService.js"></script>
    <script type="text/javascript" src="assets/controler.js"></script>
+   <script type="text/javascript" src="assets/pageLoadTrigger.js"></script>
 </body>
 </html>
