Searches are now stocked in objects

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
          </div>
          <div class="d-flex justify-content-center">
-            <button type="button" class="btn" id="startRecordingButton">
+            <button type="button" class="btn border-0" id="startRecordingButton">
                <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
          </div>
@@ -155,6 +155,7 @@
    <script type="text/javascript" src="assets/fft/utils.js"></script>
    <script type="text/javascript" src="assets/fft/fft.js"></script>
    <script type="text/javascript" src="assets/constants.js"></script>
+   <script type="text/javascript" src="assets/tuneSearchClass.js"></script>
    <script type="text/javascript" src="assets/utils.js"></script>
    <script type="text/javascript" src="assets/locale.js"></script>
    <script type="text/javascript" src="assets/resultService.js"></script>
