--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
    <div class="container m-5">
       <div class="container ml-5">
          <div class="d-flex justify-content-between">
-            <button data-i18n-key="about" type="button" class="btn btn-secondary " data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
-            <select data-i18n-switcher class="form-select w-auto" aria-label="Dropdown menu for langage selection" id="langage-selection">
+            <button data-i18n-key="about" type="button" class="btn btn-dark" data-bs-toggle="collapse" data-bs-target="#aboutCollapsed">À propos</button>
+            <select data-i18n-switcher class="form-select w-auto focus-ring" style="--bs-focus-ring-color: rgba(var(--bs-emphasis-color-rgb), 1.0);" aria-label="Dropdown menu for langage selection" id="langage-selection">
                <option value="fr" selected>fr</option>
                <option value="en">en</option>
             </select>
