Added a Buy Me A Coffee link

--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
    </div>
    <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
+         <div class="d-flex justify-content-end">
+            <a href="https://buymeacoffee.com/ludovical" class="rounded-3 border border-2 p-2 text-reset text-decoration-none fs-5" title="Buy me a coffee" target="_blank">
+               <div class="row">
+                  <img src="icons/BuyMeACoffee.svg" alt="Buy me a coffee" class="img-fluid col align-self-center" style="height:35px">
+                  <div data-i18n-key="buymeacoffee" class="col-auto align-self-center fw-bolder">Achetez-moi un café</div>
+               </div>
+            </a>
+         </div>
+         <br>
          <small data-i18n-key="footer" class="text-muted">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
       </div>
    </footer>
