--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
                      <h5 data-i18n-key="repositoryTitle" class="card-title">Dépôt Github</h5>
-                     <p data-i18n-key="repositoryDescription" class="card-text">Un dépôt de partitions trad québécoises et irlandaises.</p>
+                     <p data-i18n-key="repositoryDescription" class="card-text">Mon dépôt de partitions trad québécoises et irlandaises.</p>
                      <a data-i18n-key="followLink" href="https://ludovical.github.io/Partitions/" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
                <div class="card m-1" style="width: 18rem;">
                   <div class="card-body">
                      <h5 data-i18n-key="folksetTitle" class="card-title">FolkSets</h5>
-                     <p data-i18n-key="folksetDescription" class="card-text">Le dépôt Github d'un projet de liseuse de partitions pour appareils Android.</p>
+                     <p data-i18n-key="folksetDescription" class="card-text">Le dépôt Github de mon projet de liseuse de partitions pour appareils Android.</p>
                      <a data-i18n-key="followLink" href="https://github.com/LudovicAL/FolkSets" class="btn btn-primary" target="_blank">Y aller</a>
                   </div>
                </div>
