Footer is now a one-liner

--- a/index.html
+++ b/index.html
@@ -147,16 +147,17 @@
    </div>
    <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-         <div class="d-flex justify-content-end">
-            <a href="https://buymeacoffee.com/ludovical" class="rounded-3 border border-2 p-2 text-reset text-decoration-none fs-5" title="Buy me a coffee" target="_blank">
-               <div class="row px-3">
-                  <img src="icons/BuyMeACoffee.svg" alt="Buy me a coffee" class="img-fluid col align-self-center p-0" style="height:35px">
-                  <div data-i18n-key="buymeacoffee" class="col-auto align-self-center fw-bolder p-0">Achetez-moi un café</div>
-               </div>
-            </a>
+         <div class="row">
+            <small data-i18n-key="footer" class="col-auto text-muted align-self-center">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
+            <div class="d-flex justify-content-end col">
+               <a href="https://buymeacoffee.com/ludovical" class="rounded-3 border border-2 p-2 text-reset text-decoration-none fs-5 align-self-center" title="Buy me a coffee" target="_blank">
+                  <div class="row px-3">
+                     <img src="icons/BuyMeACoffee.svg" alt="Buy me a coffee" class="img-fluid col align-self-center p-0" style="height:35px">
+                     <div data-i18n-key="buymeacoffee" class="col-auto align-self-center fw-bolder p-0">Achetez-moi un café</div>
+                  </div>
+               </a>
+            </div>
          </div>
-         <br>
-         <small data-i18n-key="footer" class="text-muted">Adapté du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>) par Ludovic A.-Lussier.</small>
       </div>
    </footer>
    <script type="text/javascript" src="assets/aho-corasick/aho-corasick.js"></script>
