--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
                <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
             </button>
          </div>
+         <!-- Hello there, glad you are looking at my code!
+              Importing WAV is an experimental functionality.
+              To try it, remove 'd-none' from the class list of the following DIV element.
+              A new button will appear on the web page. -->
+         <div class="d-flex justify-content-center d-none">
+            <button data-i18n-key="importWav" id="importWavButton" type="button" class="btn btn-dark">Importez un Wav</button>
+            <input class="form-control d-none" type="file" id="hiddenFilePicker" accept="audio/wav">
+         </div>
          <div class="d-flex justify-content-center mx-auto my-2">
             <table class="w-auto table table-bordered" id="resultTable"></table>
          </div>
          <div class="collapse" id="debugDiv">
-            <div>
-               <h4 class="mt-3">Chercher dans l'index</h4>
-               <button type="button" class="btn btn-danger btn-lg" id="startSearchingButton">Chercher</button>
-            </div>
-            <div>
-               <h4 class="mt-3">Importer un fichier audio</h4>
-               <button type="button" class="btn btn-danger btn-lg" id="startImportingButton">Importer</button>
-            </div>
             <div>
                <h4 class="mt-3">Signal canvas</h4>
                <canvas class="border" id="signalCanvas"></canvas>
@@ -172,6 +172,7 @@
    <script type="text/javascript" src="assets/tuneIndexService.js"></script>
    <script type="text/javascript" src="assets/toAbcConverter.js"></script>
    <script type="text/javascript" src="assets/processingService.js"></script>
+   <script type="text/javascript" src="assets/importingService.js"></script>
    <script type="text/javascript" src="assets/recordingService.js"></script>
    <script type="text/javascript" src="assets/controler.js"></script>
    <script type="text/javascript" src="assets/pageLoadTrigger.js"></script>
