The 'Useful Links' section is now centered

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a data-i18n-key="feedback" href="mailto:ludovicaubut@hotmail.com" class="btn btn-warning mb-3" role="button">Communiquer avec Tradify</a>
          </div>
          <h4 data-i18n-key="links">Liens utiles</h4>
-         <div class="container d-flex flex-wrap">
+         <div class="container d-flex flex-wrap justify-content-center">
             <div class="card m-1" style="width: 18rem;">
                <div class="card-body">
                   <h5 data-i18n-key="repositoryTitle" class="card-title">Dépôt Github</h5>
