--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="theme-color" content="#000000">
+   <link rel="manifest" href="manifest.json">
    <link rel="icon" type="image/png" href="icons/favicon.ico">
+   <link rel="apple-toutch-icon" href="icons/logo192.png">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
