--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
       <div class="d-flex justify-content-center">
          <button type="button" class="btn border-0" id="startRecordingButton">
-            <img src="icons/Idle.svg" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
+            <img src="icons/Idle.svg" fetchpriority="high" alt="Record" class="img-fluid" style="height:300px" id="startRecordingImage">
          </button>
       </div>
       <!-- Hello there, glad you are looking at my code!
