--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="theme-color" content="#000000">
+   <meta name="apple-mobile-web-app-status-bar" content="#000000">
    <link rel="manifest" href="manifest.json">
    <link rel="icon" type="image/png" href="icons/favicon.ico">
-   <link rel="apple-toutch-icon" href="icons/logo192.png">
+   <link rel="apple-toutch-icon" href="icons/logo-512.svg">
+   <link rel="apple-toutch-icon" href="icons/logo-512.png">
+   <link rel="apple-toutch-icon" href="icons/logo-192.png">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -165,6 +168,7 @@
       </div>
    </footer>
    <!-- External libraries -->
+   <script type="text/javascript" src="assets/beforePageLoad.js"></script>
    <script type="text/javascript" src="assets/aho-corasick/aho-corasick.js"></script>
    <script type="text/javascript" src="assets/als-wave-parser/wav-parser.js"></script>
    <script type="text/javascript" src="assets/fft/utils.js"></script>
@@ -183,6 +187,6 @@
    <script type="text/javascript" src="assets/recordingService.js"></script>
    <!-- Controlers -->
    <script type="text/javascript" src="assets/controler.js"></script>
-   <script type="text/javascript" src="assets/pageLoadTrigger.js"></script>
+   <script type="text/javascript" src="assets/afterPageLoad.js"></script>
 </body>
 </html>
