--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
    <link rel="apple-toutch-icon" href="icons/logo-512.svg">
    <link rel="apple-toutch-icon" href="icons/logo-512.png">
    <link rel="apple-toutch-icon" href="icons/logo-192.png">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   <script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
+   <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
+   <script type="text/javascript" src="assets/bootstrap/bootstrap.bundle.min.js"></script>
    <script type="module">
       import { get, set, clear, keys, del }
-      from "https://cdn.jsdelivr.net/npm/idb-keyval@3/dist/idb-keyval.mjs";
+      from "./assets/idb-keyval/idb-keyval.mjs";
       window.idbKV = { get: get, set: set, clear: clear, keys: keys, del: del };
    </script>
 </head>
