Added an install button for mobile devices

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
          </p>
          <div class="d-flex justify-content-between align-items-center flex-wrap flex-fill">
             <a data-i18n-key="download" href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success mb-3" role="button">Télécharger les partitions au format ZIP</a>
+            <button data-i18n-key="install" id="installButton" class="btn btn-danger mb-3 d-none">Installer cette App</button>
             <a data-i18n-key="feedback" href="mailto:ludovicaubut@hotmail.com" class="btn btn-warning mb-3" role="button">Communiquer avec Tradify</a>
          </div>
          <h4 data-i18n-key="links">Liens utiles</h4>
