Added more error message translations

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
            To activate it, change de value of the 'DEBUG_MODE' constant in the Javascript source code. -->
       <div class="collapse" id="debugDiv">
          <div>
+            <h4 class="mt-3">Blackman Window canvas</h4>
+            <canvas class="border" id="blackmanWindowCanvas"></canvas>
             <h4 class="mt-3">Signal canvas</h4>
             <canvas class="border" id="signalCanvas"></canvas>
             <h4 class="mt-3">Lattice canvas</h4>
