--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
 
 <head>
    <title data-i18n-key="title">Tradify</title>
-   <meta name="description" content="The Shazam of trad music.">
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="theme-color" content="#000000">
-   <meta name="apple-mobile-web-app-status-bar" content="#000000">
-   <link rel="manifest" href="manifest.json">
-   <link rel="icon" type="image/png" href="icons/favicon.ico">
-   <link rel="apple-toutch-icon" href="icons/logo-512.svg">
-   <link rel="apple-toutch-icon" href="icons/logo-512.png">
-   <link rel="apple-toutch-icon" href="icons/logo-192.png">
+   <meta name="title" property="og:title" content="Tradify" />
+   <meta name="description" property="og:description" content="Le Shazam de la musique traditionnelle" />
+   <meta name="image" property="og:image" content="http://ludovical.github.io/Tradify/icons/logo-192.png" />
+   <meta name="image" property="og:image:secure_url" content="https://ludovical.github.io/Tradify/icons/logo-192.png" />
+   <meta property="og:image:type" content="image/png" />
+   <meta property="og:image:width" content="192" />
+   <meta property="og:image:height" content="192" />
+   <meta property="og:image:alt" content="Un T majuscule stylisé" />
+   <meta property="og:site_name" content="Tradify" />
+   <meta property="og:url" content="https://ludovical.github.io/Tradify/" />
+   <meta property="og:type" content="website" />
+   <meta property="og:locale" content="fr_CA" />
+   <meta property="og:locale:alternate" content="en_US" />
+   <meta charset="utf-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="theme-color" content="#000000" />
+   <meta name="apple-mobile-web-app-status-bar" content="#000000" />
+   <link rel="manifest" href="manifest.json" />
+   <link rel="icon" type="image/png" href="icons/favicon.ico" />
+   <link rel="apple-toutch-icon" href="icons/logo-512.svg" />
+   <link rel="apple-toutch-icon" href="icons/logo-512.png" />
+   <link rel="apple-toutch-icon" href="icons/logo-192.png" />
    <script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
-   <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
+   <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css" />
    <script type="text/javascript" src="assets/bootstrap/bootstrap.bundle.min.js"></script>
    <script type="module">
       import { get, set, clear, keys, del }
