--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
    <title data-i18n-key="title">Tradify</title>
-   <meta name="title" property="og:title" content="Tradify" />
-   <meta name="description" property="og:description" content="Le Shazam de la musique traditionnelle" />
-   <meta name="image" property="og:image" content="http://ludovical.github.io/Tradify/icons/logo-512.png" />
-   <meta name="image" property="og:image:secure_url" content="https://ludovical.github.io/Tradify/icons/logo-512.png" />
+   <meta name="title" content="Tradify" />
+   <meta property="og:title" content="Tradify" />
+   <meta name="description" content="Le Shazam de la musique traditionnelle" />
+   <meta property="og:description" content="Le Shazam de la musique traditionnelle" />
+   <meta name="image" content="https://ludovical.github.io/Tradify/icons/logo-512.png" />
+   <meta property="og:image" content="http://ludovical.github.io/Tradify/icons/logo-512.png" />
+   <meta property="og:image:secure_url" content="https://ludovical.github.io/Tradify/icons/logo-512.png" />   
    <meta property="og:image:type" content="image/png" />
    <meta property="og:image:width" content="512" />
    <meta property="og:image:height" content="512" />
