--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
    <meta property="og:locale" content="fr_CA" />
    <meta property="og:locale:alternate" content="en_US" />
    <meta charset="utf-8" />
-   <meta name="keywords" content="Trad, Québécois, Irlandais, Musique">
-   <meta name="author" content="Ludovic A.-Lussier">
+   <meta name="keywords" content="Trad, Québécois, Irlandais, Musique" />
+   <meta name="author" content="Ludovic A.-Lussier" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="theme-color" content="#000000" />
    <meta name="apple-mobile-web-app-status-bar" content="#000000" />
+   <meta name="robots" content="index"/>
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <link rel="manifest" href="manifest.json" />
    <link rel="icon" type="image/png" href="icons/favicon.ico" />
