Correction of a typo in Tom Wyllie's name. Tom Wyllie is the creator of Folkfriend, which is the foundation of this project.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div id="aboutCollapsed" class="collapse mt-3 p-4 bg-light rounded">
          <p data-i18n-key="lead">
             Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions.
-            Elle est fortement inspirée du travail de Tom Willy (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>).
+            Elle est fortement inspirée du travail de Tom Wyllie (<a href="https://folkfriend.app/" target="_blank">FolkFriend</a>).
          </p>
          <div class="d-flex justify-content-between align-items-center flex-wrap flex-fill mb-3">
             <a data-i18n-key="download" href="https://github.com/LudovicAL/Partitions/archive/refs/heads/main.zip" class="btn btn-success" role="button">Télécharger les partitions au format ZIP</a>
